# phantom-board

./: .gitignore  CMakeLists.txt  README.md
ctl/: CMakeLists.txt
ctl/include/: app.hpp  state.hpp
ctl/include/dbus/: dbus_client.hpp
ctl/src/: app.cpp  main.cpp
ctl/src/dbus/: dbus_client.cpp
daemon/: CMakeLists.txt
daemon/include/core/: buffer_manager.hpp  daemon.hpp  output_manager.hpp  state_manager.hpp  types.hpp
daemon/include/dbus/: dbus_adaptor.hpp  dbus_service.hpp
daemon/include/ime/ibus/: ibus_callbacks.hpp  ibus_client.hpp
daemon/src/core/: buffer_manager.cpp  daemon.cpp  input_manager.cpp  output_manager.cpp  state_manager.cpp
daemon/src/dbus/: dbus_adaptor.cpp  dbus_service.cpp
daemon/src/ime/ibus/: ibus_callbacks.cpp  ibus_client.cpp
include/: dbus_configure.hpp
include/daemon/: buffer_manager.hpp  daemon.hpp  input_manager.hpp  output_manager.hpp  state_manager.hpp  types.hpp
include/daemon/core/: buffer_manager.hpp  daemon.hpp  input_manager.hpp  output_manager.hpp
include/daemon/ime/ibus/: ibus_client.hpp
resources/: ctl_build.sh  ctl_run.sh  daemon_build.sh  daemon_run.sh  daemon_setup.sh  ui_build.sh  ui_run.sh  ui_setup.sh
rules/: 99-bunny-kbd.rules  99-phantom-kbd.rules
src/daemon/: buffer_manager.cpp  daemon.cpp  input_manager.cpp  main.cpp  output_manager.cpp  state_manager.cpp
src/daemon/core/: buffer_manager.cpp  daemon.cpp  input_manager.cpp  output_manager.cpp
src/daemon/ime/ibus/: ibus_client.cpp
ui/: CMakeLists.txt
ui/src/: main.cpp
